update colors to match web design standards

--- a/assets/_sass/styles.scss
+++ b/assets/_sass/styles.scss
@@ -2,9 +2,12 @@
 @import "neat/neat";
 
 // Colors
-$atlantic_blue:       #36435a;
-$pacific_blue:        #3A96B7;
-$miami_vice_blue:     #3A96B7;
+// $atlantic_blue:       #323A45; // gray-dark
+$atlantic_blue:       #112E51; // primary-darkest
+// $atlantic_blue:       #36435a; // original
+$pacific_blue:        #046B99; // primary-alt-darkest
+// $pacific_blue:        #0071BC; // primary
+// $pacific_blue:     #3A96B7; // original
 $white:               #fff;
 $black:               #333;
 $gray:                #4D4D4D;
@@ -100,7 +103,7 @@ $slimmer: new-breakpoint(min-width 641px max-width 980px 12);
     font-size: 17px;
     font-weight: 700;
     line-height: 1.375em;
-    color: $miami_vice_blue;
+    color: $pacific_blue;
     margin-bottom: 0;
   }
 
@@ -270,7 +273,7 @@ $slimmer: new-breakpoint(min-width 641px max-width 980px 12);
 
     .active {
       a {
-        background: $miami_vice_blue;
+        background: $pacific_blue;
         color: $white;
         text-decoration: none;
       }
@@ -293,7 +296,7 @@ $slimmer: new-breakpoint(min-width 641px max-width 980px 12);
         border: 1px solid $pacific_blue;
       }
       a:hover {
-        background: $miami_vice_blue;
+        background: $pacific_blue;
         color: $white;
         text-decoration: none;
       }
@@ -357,7 +360,7 @@ $slimmer: new-breakpoint(min-width 641px max-width 980px 12);
   }
 
   #plays_index {
-    background: $miami_vice_blue;
+    background: $pacific_blue;
     padding-bottom: 60px;
     color: $white;
 
