--- a/_layouts/techfar.html
+++ b/_layouts/techfar.html
@@ -24,10 +24,10 @@
     <div class="inner_container">
       {{ content }}
     <div class="button">
-  <a href="https://github.com/WhiteHouse/playbook/blob/gh-pages/_includes/techfar-online.md" title="Link to View the Handbook">READ THE HANDBOOK</a>
+  <a href="https://github.com/WhiteHouse/playbook/blob/gh-pages/_includes/techfar-online.md" title="Link to View the Handbook">Read the Handbook</a>
 </div>
 <div class="button">
-  <a href="https://github.com/whitehouse/playbook#readme" title="Link to Comments and Discussion">SUBMIT COMMENTS</a>
+  <a href="https://github.com/whitehouse/playbook#readme" title="Link to Comments and Discussion">Submit comments</a>
 </div>
 
 <p class="download_links">You can also <a href="/assets/TechFAR%20Handbook_2014-08-07.pdf" title="Link to download the TechFAR Handbook as a PDF">download the handbook as a PDF file</a> or <a href="/assets/TechFAR%20Handbook_2014-08-07.docx" title="Link to Download the TechFAR Handbook as a .docx document">.DOCX document</a></p>
