Update Playbook for updated TechFar Handbook

--- a/_layouts/techfar.html
+++ b/_layouts/techfar.html
@@ -25,17 +25,11 @@
   <div class="outer_container">
     <div class="inner_container">
       {{ content }}
-    <div class="button">
-  <a href="https://github.com/WhiteHouse/playbook/blob/gh-pages/_includes/techfar-online.md" title="Link to View the Handbook">Read the Handbook</a>
-</div>
-<div class="button">
-  <a href="https://github.com/whitehouse/playbook#readme" title="Link to Comments and Discussion">Submit comments</a>
-</div>
-
-<p class="download_links">You can also <a href="/assets/TechFAR%20Handbook_2014-08-07.pdf" title="Link to download the TechFAR Handbook as a PDF">download the handbook as a PDF file</a> or <a href="/assets/TechFAR%20Handbook_2014-08-07.docx" title="Link to Download the TechFAR Handbook as a .docx document">.DOCX document</a></p>
-
-</div>
-</div>
+      <div class="button">
+        <a href="https://techfarhub.cio.gov/handbook/" title="Link to View the Handbook">Read the Handbook</a>
+      </div>
+  </div>
+  </div>
 </div>
 
 <script async id="_fed_an_js_tag" type="text/javascript" src="{{site.baseurl}}/assets/js/federated-analytics.all.min.js?agency=EOP&amp;sub-agency=USDS"></script>
