--- a/_layouts/techfar.html
+++ b/_layouts/techfar.html
@@ -33,5 +33,6 @@
 </div>
 
 <script async id="_fed_an_js_tag" type="text/javascript" src="{{site.baseurl}}/assets/js/federated-analytics.all.min.js?agency=EOP&amp;sub-agency=USDS"></script>
+{% include google-analytics.html %}
 </body>
 </html>
