--- a/_includes/google-analytics.html
+++ b/_includes/google-analytics.html
@@ -1,4 +1,6 @@
-{% comment %}Global site tag (gtag.js) - Google Analytics - USDS account{% endcomment %}
+{% comment %}
+  Global site tag (gtag.js) - Google Analytics - USDS account
+{% endcomment %}
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-132706295-2"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
