edit TOC background color to blue-medium

--- a/assets/_sass/styles.scss
+++ b/assets/_sass/styles.scss
@@ -367,7 +367,7 @@ $slimmer: new-breakpoint(min-width 641px max-width 980px 12);
   }
 
   #plays_index {
-    background: $usds-blue-bright-dark;
+    background: $usds-blue-medium;
     padding-bottom: 60px;
     color: $white;
 
